--- a/About/about.html
+++ b/About/about.html
@@ -165,19 +165,19 @@
                 <h1 class="center">Our Team</h1>
                 <div class="founders">
                     <div class="founder">
-                        <img src="../Img/William2.jpeg" alt="William">
+                        <img src="../Img/Default_pfp.svg.png" alt="William">
                         <h2>William</h2>
                         <h3>CEO of ReadIt</h3>
                         <p>William is our CEO of ReadIt and contributed a lot to our website. He is also the project leader here. He has run over 10 websites like this. Although he usually says he is a penniless CEO, it isn't the truth. He is actually lying. He is actually an RK. And you know what? Lisa becomes really famous solely because of him!!!</p>
                     </div>
                     <div class="founder">
-                        <img src="../Img/Myint Myat Thura Aung.jpeg" alt="Myint Myat Thura Aung">
+                        <img src="../Img/Default_pfp.svg.png" alt="Myint Myat Thura Aung">
                         <h2>Myint Myat Thura Aung</h2>
                         <h3>Co-founder of ReadIt</h3>
                         <p>Myint Myat Thura Aung is one of our co-founders of ReadIt and help the website in the front-end development. His engaging designs are what make the website become popular. As seen in the photo, he has a massager who is our "Kyat Kyaw Tha Yell."</p>
                     </div>
                     <div class="founder">
-                        <img src="../Img/YeMarnAung.jpeg" alt="Ye Marn Aung">
+                        <img src="../Img/Default_pfp.svg.png" alt="Ye Marn Aung">
                         <h2>Ye Marn Aung</h2>
                         <h3>Co-founder of ReadIt</h3>
                         <p>Ye Marn Aung is one of our co-founders of ReadIt and aid in the back-end development of our website. He is also known as our "Kyat Kyaw Tha Yell."</p>
@@ -187,19 +187,19 @@
             <div class="founders-container">
                 <div class="founders">
                     <div class="founder">
-                        <img src="../Img/Lin Khant Zaw.jpeg" alt="Lin Khant Zaw">
+                        <img src="../Img/Default_pfp.svg.png" alt="Lin Khant Zaw">
                         <h2>Lin Khant Zaw</h2>
                         <h3>Co-founder of ReadIt</h3>
                         <p>Lin Khant Zaw is our co-founder of ReadIt and also one of the front-end developers in our website. His amazing coding concepts excellently aids in the maintainability of the website. He is know as our "Kwee."</p>
                     </div>
                     <div class="founder">
-                        <img src="../Img/Thoon Thoon.jpeg" alt="Thoon Thoon">
+                        <img src="../Img/Default_pfp.svg.png" alt="Thoon Thoon">
                         <h2>Thoon Thoon</h2>
                         <h3>Co-founder of ReadIt</h3>
                         <p>Thoon Thoon is one of our co-founders of ReadIt and one of the back-end developers in our website. Everyone proves of her astonishing codability. Her girlfriend usually gets mad at her which always drives her crazy but she is strong enough to tolerate with that. :v</p>
                     </div>
                     <div class="founder">
-                        <img src="../Img/Zin Nwe Htun.jpeg" alt="Zin Nwe Htun">
+                        <img src="../Img/Default_pfp.svg.png" alt="Zin Nwe Htun">
                         <h2>Zin Nwe Htun</h2>
                         <h3>Co-founder of ReadIt</h3>
                         <p>Zin Nwe Htun is one of our co-founders of ReadIt and the only one UI-UX designer here. Her asethetic design concepts has absolutely enhanced the user interface. She usually sleeps though :3"</p>
@@ -209,13 +209,13 @@
             <div class="founders-container">
                 <div class="founders">
                     <div class="founder">
-                        <img src="../Img/Daniel.jpeg" alt="Daniel">
+                        <img src="../Img/Default_pfp.svg.png" alt="Daniel">
                         <h2>Daniel</h2>
                         <h3>Co-founder of ReadIt</h3>
                         <p>Daniel is one of our co-founders of ReadIt and one of the best footballers here. He can not only code but he is also so handsome that he is one of the faces of the university. Do you think he is just good at coding and football? No, he is also one of the best gamers at university.</p>
                     </div>
                     <div class="founder">
-                        <img src="../Img/Thaw Bhone Htet.jpeg" alt="Thaw Bhone Htet">
+                        <img src="../Img/Default_pfp.svg.png" alt="Thaw Bhone Htet">
                         <h2>Thaw Bhone Htet</h2>
                         <h3>Co-founder of ReadIt</h3>
                         <p>Thaw Bhone Htet is one of our co-founders of ReadIt and he specialises in front-end development. As he is also a professional at networking, he is one of our core members in our team. But he likes sleeping. But the incredible fact is that He loves his girlfriend even more than sleeping. He usually says, "my girlfriend is my world and I can't live without her".</p>
