--- a/Custom Package/custom-package.html
+++ b/Custom Package/custom-package.html
@@ -264,10 +264,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="footwear">
-                    <img src="../Img/Footwear.webp" alt="Footwear">
+                <div class="bookmark">
+                    <img src="../Img/Bookmark.jpeg" alt="Bookmark">
                     <div class="text-container">
-                        <h2>Footwear</h2>
+                        <h2>Bookmark</h2>
                         <p>£9.99</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
@@ -290,10 +290,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="leggings">
-                    <img src="../Img/legging.webp" alt="Leggings">
+                <div class="crayons">
+                    <img src="../Img/Crayons.jpeg" alt="Crayons">
                     <div class="text-container">
-                        <h2>Leggings</h2>
+                        <h2>A set of crayons</h2>
                         <p>£19.99</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
@@ -316,10 +316,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="skirt">
-                    <img src="../Img/Skirt.webp" alt="Skirt">
+                <div class="rucksack">
+                    <img src="../Img/Rucksack2.webp" alt="Rucksack" style="object-fit: fill">
                     <div class="text-container">
-                        <h2>Skirt</h2>
+                        <h2>Rucksack</h2>
                         <p>£29.99</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
@@ -334,6 +334,89 @@
                     <div class="text-container">
                         <h2>Bag</h2>
                         <p>£14.99</p>
+                        <p class="quantity">Quantity</p>
+                        <div class="plus-minus">
+                            <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
+                            <div class="amount" id="amount">0</div>
+                            <button class="plus-btn"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrap wrap2">
+            <h2>Box of Refreshments</h2>
+            <div class="products-container products-container2">
+                <div class="snackbox1">
+                    <img src="../Img/Snackbox1 (Frito).webp" alt="Frito">
+                    <div class="text-container">
+                        <h2>Frito</h2>
+                        <p>£29.99</p>
+                        <p class="quantity">Quantity</p>
+                        <div class="plus-minus">
+                            <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
+                            <div class="amount" id="amount">0</div>
+                            <button class="plus-btn"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="snackbox2">
+                    <img src="../Img/Snackbox2 (Ritz).webp" alt="Ritz">
+                    <div class="text-container">
+                        <h2>Ritz</h2>
+                        <p>£12.99</p>
+                        <p class="quantity">Quantity</p>
+                        <div class="plus-minus">
+                            <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
+                            <div class="amount" id="amount">0</div>
+                            <button class="plus-btn"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="snackbox3">
+                    <img src="../Img/Snackbox3 (Fit).webp" alt="Fit">
+                    <div class="text-container">
+                        <h2>Fit</h2>
+                        <p>£15.99</p>
+                        <p class="quantity">Quantity</p>
+                        <div class="plus-minus">
+                            <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
+                            <div class="amount" id="amount">0</div>
+                            <button class="plus-btn"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="snackbox4">
+                    <img src="../Img/Snackbox4 (Doritos).webp" alt="Doritos">
+                    <div class="text-container">
+                        <h2>Doritos</h2>
+                        <p>£19.99</p>
+                        <p class="quantity">Quantity</p>
+                        <div class="plus-minus">
+                            <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
+                            <div class="amount" id="amount">0</div>
+                            <button class="plus-btn"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="snackbox5">
+                    <img src="../Img/Snackbox5 (David).webp" alt="David">
+                    <div class="text-container">
+                        <h2>David</h2>
+                        <p>£24.99</p>
+                        <p class="quantity">Quantity</p>
+                        <div class="plus-minus">
+                            <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
+                            <div class="amount" id="amount">0</div>
+                            <button class="plus-btn"><i class="fa-solid fa-plus"></i></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="snackbox6">
+                    <img src="../Img/Snackbox6 (CARIAN'S BISTRO).webp" alt="CARIAN'S BISTRO">
+                    <div class="text-container">
+                        <h2>Carian's Bisto</h2>
+                        <p>£19.99</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
                             <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
