--- a/Gift Hamper/gift-hamper.html
+++ b/Gift Hamper/gift-hamper.html
@@ -194,7 +194,7 @@
                             <li>An uplifting book</li>
                             <li>A mini posy</li>
                             <li>A parcel of organic tea</li>
-                            <li>A delicious artisanal chocolate/li>
+                            <li>A delicious artisanal chocolate</li>
                             <li>A gorgeous tea bath soak</li>
                         </ul>
                         <div class="for-button">
