--- a/Live Discussion/live-discussion.html
+++ b/Live Discussion/live-discussion.html
@@ -177,7 +177,7 @@
                     <input type="number" min="13" max="120" name="age" id="age" placeholder="Age" required>
                     <input type="email" name="club-email" id="club-email" placeholder="Email" required>
                     <input type="tel" name="phone-number" id="phone-number" placeholder="Phone Number" required>
-                    <input type="submit" value="Send Message" class="send-message">
+                    <input type="submit" value="Register" class="send-message">
                 </div>
             </form>
         </section>
