--- a/Merchandise/merchandise.html
+++ b/Merchandise/merchandise.html
@@ -166,9 +166,9 @@
                     </div>
                 </div>
                 <div>
-                    <img src="../Img/Footwear.webp" alt="Footwear">
+                    <img src="../Img/Bookmark.jpeg" alt="Bookmark">
                     <div class="text-container">
-                        <h2>Footwear</h2>
+                        <h2>Bookmark</h2>
                         <p>£9.99</p>
                         <p class="quantity">Quantity</p>
                         <div>
@@ -194,9 +194,9 @@
                     </div>
                 </div>
                 <div>
-                    <img src="../Img/legging.webp" alt="Leggings">
+                    <img src="../Img/Crayons.jpeg" alt="Crayons">
                     <div class="text-container">
-                        <h2>Leggings</h2>
+                        <h2>A set of crayons</h2>
                         <p>£19.99</p>
                         <p class="quantity">Quantity</p>
                         <div>
@@ -222,9 +222,9 @@
                     </div>
                 </div>
                 <div>
-                    <img src="../Img/Skirt.webp" alt="Skirt">
+                    <img src="../Img/Rucksack2.webp" alt="Rucksack" style="object-fit: fill;">
                     <div class="text-container">
-                        <h2>Skirt</h2>
+                        <h2>Rucksack</h2>
                         <p>£29.99</p>
                         <p class="quantity">Quantity</p>
                         <div>
