--- a/Custom Package/custom-package.html
+++ b/Custom Package/custom-package.html
@@ -351,6 +351,7 @@
                     <img src="../Img/Snackbox1 (Frito).webp" alt="Frito">
                     <div class="text-container">
                         <h2>Frito</h2>
+                        <p>Frito-Lay Sweet & Salty Snacks, Variety Mix of Cookies, Crackers, Chips & Nuts, (Pack of 50)</p>
                         <p>£29.99</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
@@ -364,6 +365,7 @@
                     <img src="../Img/Snackbox2 (Ritz).webp" alt="Ritz">
                     <div class="text-container">
                         <h2>Ritz</h2>
+                        <p>Peanut Butter Sandwich Crackers, 48 Snack Packs (6 Boxes, 6 Crackers Per Pack)</p>
                         <p>£12.99</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
@@ -377,6 +379,7 @@
                     <img src="../Img/Snackbox3 (Fit).webp" alt="Fit">
                     <div class="text-container">
                         <h2>Fit</h2>
+                        <p>Fit Snack - Healthy Snack Subscription Box - The World’s Healthiest, Best-Tasting Brands</p>
                         <p>£15.99</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
@@ -391,6 +394,7 @@
                     <div class="text-container">
                         <h2>Doritos</h2>
                         <p>£19.99</p>
+                        <p>Frito-Lay Doritos & Cheetos Mix Variety Pack, (Pack of 40)</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
                             <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
@@ -404,6 +408,7 @@
                     <div class="text-container">
                         <h2>David</h2>
                         <p>£24.99</p>
+                        <p>David’s Cookies Gluten-Free Assorted Cookies And Brownies</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
                             <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
@@ -417,6 +422,7 @@
                     <div class="text-container">
                         <h2>Carian's Bisto</h2>
                         <p>£19.99</p>
+                        <p>Funny Planet Snacks Pack Care Package</p>
                         <p class="quantity">Quantity</p>
                         <div class="plus-minus">
                             <button class="minus-btn low-opacity" disabled><i class="fa-solid fa-minus"></i></button>
