--- a/Log In/log-in.html
+++ b/Log In/log-in.html
@@ -134,7 +134,7 @@
             <p><a href="#">Forgot password?</a></p>
             <button><img src="../Img/Google_Icons-09-512.webp" alt="Google logo" class="google-logo"> Login with Google</button>
             <button><img src="../Img/Facebook-f_Logo-Blue-Logo.wine.svg" alt="Facebook logo" class="facebook-logo"> Login with Facebook</button>
-            <p>Don't have an account yet? <a href="../Sign up/sign-up.html">Sign up</a></p>
+            <p>Don't have an account yet? <a href="../Sign Up/sign-up.html">Sign up</a></p>
         </form>
 
     </main>
