--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
                 <div class="sign-up"><a href="Sign Up/sign-up.html">Sign Up</a></div>
             </div>
             <i class="fa-solid fa-bars fa-2x" id="menu"></i>
+        </div>
+        <div class="fixed-container">
             <nav class="navigation-bar navigation-bar-2" id="nav-2">
                 <div class="home"><a href="index.html">Home</a></div>
                 <div class="about"><a href="About/about.html">About</a></div>
