--- a/test3.html
+++ b/test3.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-       
+       img {
+        width: 100%;
+        height: 100%;
+        /* object-fit: cover; */
+        background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
+       }
     </style>
 </head>
 <body> 
+  <img src="Img/Snackbox2 (Ritz).webp" alt="">
   <script>
     
   </script>
 </body>
-</html>
+</html> 
